--- a/cucumber-jvm-selenium-maven/pom.xml
+++ b/cucumber-jvm-selenium-maven/pom.xml
@@ -29,6 +29,12 @@
 			<version>[4.12,)</version>
 		</dependency>
 
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-java</artifactId>
+      <version>[3.7.1,)</version>
+    </dependency>
+
   </dependencies>
   <build>
       <plugins>
@@ -38,8 +44,8 @@
               </artifactId>
               <version>3.1</version>
               <configuration>
-                  <source>1.7</source>
-                  <target>1.7</target>
+                  <source>1.8</source>
+                  <target>1.8</target>
                   <encoding>UTF-8</encoding>
               </configuration>
           </plugin>
