--- a/cucumber-jvm-selenium-maven/pom.xml
+++ b/cucumber-jvm-selenium-maven/pom.xml
@@ -15,6 +15,13 @@
 			<version>[1.2.5,)</version>
 		</dependency>
 
+    <!-- FileUtils -->
+    <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>[1.3.2,)</version>
+    </dependency>
+
 		<!-- These are the cucumber-junit dependencies -->
 		<dependency>
 			<groupId>info.cukes</groupId>
