--- a/primefaces/pom.xml
+++ b/primefaces/pom.xml
@@ -7,7 +7,7 @@
     <version>0.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
-    <name>rm</name>
+    <name>rm1</name>
     <url>http://maven.apache.org</url>
 
     <properties>
@@ -36,6 +36,34 @@
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.codehaus.groovy/groovy-all -->
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>2.5.1</version>
+            <type>pom</type>
+        </dependency>
+
+        <!-- https://github.com/square/okhttp -->
+        <dependency>
+          <groupId>com.squareup.okhttp3</groupId>
+          <artifactId>okhttp</artifactId>
+          <version>3.11.0</version>
+        </dependency>
+
+        <!-- retrofit2 -->
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>retrofit</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.squareup.retrofit2</groupId>
+            <artifactId>converter-gson</artifactId>
+            <version>2.3.0</version>
         </dependency>
 
         <!-- JEE dependencies -->
@@ -79,20 +107,6 @@
                     <artifactId>bctsp-jdk14</artifactId>
                 </exclusion>
             </exclusions>
-        </dependency>
-
-        <!-- FeedReader -->
-        <dependency>
-            <groupId>com.rometools</groupId>
-            <artifactId>rome</artifactId>
-            <version>1.7.3</version>
-        </dependency>
-
-        <!-- Twitter API -->
-        <dependency>
-            <groupId>org.twitter4j</groupId>
-            <artifactId>twitter4j-core</artifactId>
-            <version>3.0.5</version>
         </dependency>
 
         <!-- Logging -->
@@ -156,16 +170,19 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <encoding>${project.build.sourceEncoding}</encoding>
                 </configuration>
             </plugin>
+
+            <!--
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.2.0</version>
-            </plugin>
+            </plugin> -->
+
             <plugin>
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
@@ -217,18 +234,6 @@
                     <artifactId>javax.faces</artifactId>
                     <version>2.3.2</version>
                 </dependency>
-                <!-- MyFaces
-                <dependency>
-                    <groupId>org.apache.myfaces.core</groupId>
-                    <artifactId>myfaces-api</artifactId>
-                    <version>2.3.0-beta</version>
-                </dependency>
-                <dependency>
-                    <groupId>org.apache.myfaces.core</groupId>
-                    <artifactId>myfaces-impl</artifactId>
-                    <version>2.3.0-beta</version>
-                </dependency>
-                -->
             </dependencies>
         </profile>
         <profile>
